# ThRasE

./: .buildinfo  .dockerignore  .gitignore  CONTRIBUTING.md  Makefile  README.md  __init__.py  about.html  ccd_integration.html  editing_tools.html  example.html  genindex.html  global_editing.html  install_and_example.html  introduction.html  metadata.txt  multi_view.html  navigation.html  objects.inv  pyproject.toml  references.html  registry.html  requirements_docs.txt  requirements_test.txt  resources.py  resources.qrc  search.html  searchindex.js  session_persistence.html  thematic_requirements.html  thrase.py
.docker/: Dockerfile  docker-compose.gh.yml  run-docker-tests.sh  run-tests.sh
.github/workflows/: build_docs.yml  draft-pdf.yml  package.yml  release.yml  tests.yml
ThRasE/: __init__.py  metadata.txt  resources.py  resources_rc.py  thrase.py
ThRasE/core/: editing.py  navigation.py  registry.py
ThRasE/gui/: about.html  about_dialog.py  apply_from_classes_or_mask.py  apply_from_thematic_classes.py  autofill_dialog.py  layer_toolbar_widget.py  main_dialog.py  navigation_dialog.py  registry_widget.py  render_widget.py  view_widget.py
ThRasE/icons/: Makefile  resources.qrc
ThRasE/ui/: apply_from_classes_or_mask.ui  apply_from_thematic_classes.ui  autofill_dialog.ui  layer_toolbar_widget.ui  main_dialog.ui  registry_widget.ui  style_editor.ui  view_widget_single.ui
ThRasE/utils/: kml_utils.py  others_utils.py  qgis_utils.py  system_utils.py
_sources/: about.md  ccd_integration.md  editing_tools.md  example.md  global_editing.md  introduction.md  multi_view.md  navigation.md  references.md  registry.md  session_persistence.md  thematic_requirements.md
core/: editing.py  edition.py  navigation.py  registry.py
docs/: README.md  _config.yml  _toc.yml  about.md  ccd_integration.md  editing_tools.md  global_editing.md  index.md  install_and_example.md  introduction.md  multi_view.md  registry.md  thematic_example.tif  thematic_requirements.md
gui/: about.html  about_dialog.py  active_layer.py  apply_from_thematic_classes.py  autofill_dialog.py  build_navigation.py  layer_toolbar_widget.py  layer_view_widget.py  main_dialog.py  navigation_dialog.py  registry_widget.py  render_widget.py  thrase_dialog.py  view_widget.py
paper/: paper.bib  paper.md
tests/: conftest.py  test_autofill.py  test_editing.py  test_navigation.py  test_yaml_restore.py
tests/data/: freehand.gpkg  line.gpkg  polygon.gpkg  test_data.tif  test_data_2.tif  test_data_freehand.tif  test_data_line.tif  test_data_polygon.tif  test_data_thematic_classes.tif  test_data_thrase.yaml  test_data_vector_mask.tif  test_data_whole_image.tif
ui/: about_dialog.ui  active_layer.ui  apply_from_thematic_classes.ui  autofill_dialog.ui  build_navigation.ui  init_dialog.ui  layer_toolbar_widget.ui  layer_view_widget.ui  main_dialog.ui  navigation_dialog.ui  registry_widget.ui  render_view_config_dialog.ui  thrase_dialog_base.ui  view_widget.ui  view_widget_multi.ui  view_widget_single.ui
utils/: extra_deps.py  others_utils.py  qgis_utils.py  system_utils.py
