[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thrase"
version = "0.0"
description = "ThRasE is an open-source QGIS plugin designed for systematic review, manual correction, and quality assurance of thematic rasters."
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [{ name = "Xavier C. Llano", email = "xavier.corredor.llano@gmail.com" }]
keywords = ["qgis", "raster", "thematic", "categorical", "editing", "reclassification", "navigation", "quality"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "numpy",
  "PyYAML",
]

[project.urls]
Homepage = "https://smbyc.github.io/ThRasE"
Documentation = "https://smbyc.github.io/ThRasE"
Repository = "https://github.com/SMByC/ThRasE"
Issues = "https://github.com/SMByC/ThRasE/issues"
"QGIS Plugin" = "https://plugins.qgis.org/plugins/ThRasE/"

[project.optional-dependencies]
# uv pip sync pyproject.toml --extra docs
docs = [
  "jupyter-book<2",
  "jupytext",
]
# uv pip sync pyproject.toml --extra test
test = [
  "pytest",
  "pytest-qgis",
]

[tool.hatch.build.targets.wheel]
packages = ["ThRasE"]

[tool.qgis-plugin-ci]
plugin_path = "ThRasE"
github_organization_slug = "SMByC"
project_slug = "ThRasE"

[tool.uv]
package = false

[tool.uv.sources]
qgis = { path = "/usr/lib/python3.13/site-packages" }

[tool.pyright]
extraPaths = ["/usr/lib/python3.13/site-packages/"]
venv = ".venv"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownMemberType = "none"
reportMissingTypeStubs = false
reportMissingParameterType = false
